5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1646_2729.log
== TEST (2019-04-15 22:08:10) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

if(n1 % 2 == 0 and n2 % 2 == 0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:08:24) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

if(n1 % 2 == 0 and n2 % 2 == 0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:08:31) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

if(n1 % 2 == 0 and n2 % 2 == 0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- EXECUTION TIME:
0.221653
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:08:53) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

if(n1 % 2 == 0 and n2 % 2 == 0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:10:36) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

if(n1*n2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:10:46) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

if(n1*n2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- EXECUTION TIME:
0.132969
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:10:49) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

if(n1*n2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:11:31) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

if(n1*n2==2):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- EXECUTION TIME:
0.240883
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:12:49) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
nt=n1*n2
if(nt%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:12:56) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
nt=n1*n2
if(nt%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- EXECUTION TIME:
0.190566
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:13:05) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
nt=n1*n2
if(nt%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- EXECUTION TIME:
0.215492
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:13:09) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
nt=n1*n2
if(nt%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:13:41) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

nt=n1*n2

if(nt%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:13:57) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

nt=n1*n2

if(nt%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:14:08) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

nt=n1*n2

if(nt%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:15:23) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2

if(p%1!=0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:15:30) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2

if(p%1!=0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:15:57) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2

if(p%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:16:30) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2
if(s%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:16:37) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2
if(s%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:17:27) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2
if(n1*n2==s):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:17:35) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2
if(n1*n2==s):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- EXECUTION TIME:
0.155117
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:17:43) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2
if(n1*n2==s):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:17:50) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2
if(n1*n2==s):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:17:57) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2
if(n1*n2==s):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:18:21) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

if(n1*n2==%2):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- ERROR:
File "XXXX", line 4
    if(n1*n2==%2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:18:56) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

if(n1*n2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:19:30) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

s=n1*n2

if(s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:19:43) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

s=n1*n2

if(s%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:19:51) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

s=n1*n2

if(s%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:22:59) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

n1*n2

if(((n1*n2)%2)==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:23:21) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))



if(n1*n2%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:23:35) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))



if(n1*n2%2!=0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:23:41) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))



if(n1*n2%2!=0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- EXECUTION TIME:
0.28545
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:23:57) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))



if(n1*n2%2!=0):
	n=n2%n1
else:
	n=n1+n2
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:24:03) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))



if(n1*n2%2!=0):
	n=n2%n1
else:
	n=n1+n2
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:25:07) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(s==s):
	n=n2%n1
else:
	n=n1+n2
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:25:14) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(s==s):
	n=n2%n1
else:
	n=n1+n2
print(n)
-- EXECUTION TIME:
0.210017
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:25:29) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(s==s):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:25:43) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:25:50) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- EXECUTION TIME:
0.194727
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:27:50) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(s==1):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:28:03) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(s==2):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:28:09) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(s==2):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- EXECUTION TIME:
0.202869
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:28:14) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(s==3):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:28:26) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(s==-1):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:28:36) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:28:46) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(s==1):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:35:59) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(n1*n2%2==0 and n2*n1%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:36:18) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(n2%2==0 and n1%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:46:23) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

p=n1*n2
s=p%2

if(s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:47:28) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1%2
s=n2%2
if(a==0 and s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:47:53) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1%2
s=n2%2
p=a*s
print(p)
if(a==0 and s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:48:04) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1%2
s=n2%2
p=a*s
print(p)
if(a==0 and s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:48:16) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1%2
s=n2%2

if(a==0 and s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:48:33) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1%2
s=n2%2

if(a==0 or s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:48:38) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1%2
s=n2%2

if(a==0 or s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- EXECUTION TIME:
0.138157
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:48:43) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1%2
s=n2%2

if(a==0 and s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- EXECUTION TIME:
0.210033
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:52:29) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1%2
s=n2%2

if(a==0 and s==0):
	n=n1+n2
else:
	n=n2!=n1
print(n)
-- OUTPUT:
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:52:37) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1%2
s=n2%2

if(a==0 and s==0):
	n=n1+n2
else:
	n=n2!=n1
print(n)
-- EXECUTION TIME:
0.148724
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
True
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
True
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:52:46) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1%2
s=n2%2

if(a==0 and s==0):
	n=n1+n2
else:
	n=n2/n1
print(n)
-- OUTPUT:
1.1111111111111112
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:52:54) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1%2
s=n2%2

if(a==0 and s==0):
	n=n1+n2
else:
	n=n2//n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:53:08) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1%2
s=n2%2

if(a==0 and s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:53:22) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1%2
s=n2%2

if(a==0 and s==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- EXECUTION TIME:
0.186985
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:53:59) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
a=n1,n2

if(a%2==0 and s%2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(a%2==0 and s%2==0):
TypeError: unsupported operand type(s) for %: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:54:43) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))


if(n1%n2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:54:48) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))


if(n1%n2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:54:54) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))


if(n1%n2==0):
	n=n1+n2
else:
	n=n2%n1
print(n)
-- EXECUTION TIME:
0.184798
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:57:56) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))

if((n1*n2)%2==0):
	n=n1+n2
else:
	n
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:58:18) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
p=n1*n2
print(p)
if((n1*n2)%2==0):
	n=n1+n2
else:
	n
print(n)
-- OUTPUT:
90
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:58:46) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
p=n1*n2

if((n1*n2)%2==0):
	n=n1+n2
else:
	n=n2-n1
print(n)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:58:48) 
-- CODE:
n1=int(input("numero 1:"))
n2=int(input("numero 2:"))
p=n1*n2

if((n1*n2)%2==0):
	n=n1+n2
else:
	n=n2-n1
print(n)
-- EXECUTION TIME:
0.195595
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
